# anyreality-resi-stack

./: .markdown-link-check.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  SECURITY.md  llms.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: README.md
docs/en/: BEGINNER_GUIDE.md  CLIENTS.md  COMPARISON.md  DEPLOYMENT.md  DUAL-NODE.md  ROUTING.md  SUBSCRIPTION.md  TROUBLESHOOTING.md
docs/zh-CN/: BEGINNER_GUIDE.md  CLIENTS.md  COMPARISON.md  DEPLOYMENT.md  DUAL-NODE.md  ROUTING.md  SUBSCRIPTION.md  TROUBLESHOOTING.md
examples/: README.md
examples/dual-node/: clash-profile.yaml  sing-box-client-dual.json
examples/single-node/: 11_anytls-reality_inbounds.json  clash-profile.yaml  sing-box-client-anytls-outbound.json  sing-box-client-config.json
install/: install.sh  uninstall.sh
install/lib/: backup.sh  common.sh  singbox.sh  subscription.sh  system.sh
scripts/: make-example.sh  redact.sh
subscription/: README.md  aggregator_server.py  leaf_server.py  pyproject.toml
templates/clash/: client-dual.yaml.tmpl  client-single.yaml.tmpl
templates/env/: subscription-aggregator.env.example  subscription-leaf.env.example
templates/singbox/: 11_anytls-reality_inbounds.json.tmpl
templates/singbox-client/: anytls-outbound.json.tmpl  client-dual.json.tmpl  client-single.json.tmpl
templates/systemd/: config-backup.service  config-backup.timer  subscription-aggregator.service  subscription-leaf.service
tests/: test_aggregator_cache.py  test_content_disposition.py  test_leaf_accounting.py
