[project]
name = "anyreality-resi-stack-subscription"
version = "2.0.0"
description = "Zero-dependency Python subscription leaf and aggregator HTTP servers for the anyreality-resi-stack sing-box AnyReality (AnyTLS+Reality) / VLESS Reality deployment toolkit."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0-only" }
keywords = [
  "anthropic",
  "anyreality",
  "anytls",
  "chatgpt",
  "claude",
  "clash",
  "clash-profile",
  "debian",
  "dual-node",
  "openai",
  "proxy",
  "python-http-server",
  "reality",
  "residential-ip",
  "sing-box",
  "subscription-server",
  "systemd",
  "ubuntu",
  "usage-card",
  "v2rayn",
  "vps",
  "vless",
  "vless-reality",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/tytsxai/anyreality-resi-stack"
Repository = "https://github.com/tytsxai/anyreality-resi-stack"
Documentation = "https://github.com/tytsxai/anyreality-resi-stack/tree/main/docs"
Issues = "https://github.com/tytsxai/anyreality-resi-stack/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# urllib.urlopen is intentional — we have no third-party deps by design.
"aggregator_server.py" = ["S310"]
